--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,18 @@
+# Next.js + Netlify 配置
+[build]
+  command = "npm run build"
+  # Next.js 不需要指定 publish 目录，插件会自动处理
+
+[build.environment]
+  NODE_VERSION = "18"
+  NPM_VERSION = "9"
+  NODE_ENV = "production"
+
+# Next.js 插件配置（必须放在文件开头）
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
+
+# 图片优化设置
 [images]
   remote_images = [
     "https://source.unsplash.com/.*", 
@@ -6,30 +21,7 @@
     "https://ugc.same-assets.com/.*"
   ]
 
-[build]
-  command = "npm run build"
-  publish = ".next"
-
-[[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/:splat"
-  status = 200
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
-
-[build.environment]
-  NODE_VERSION = "18"
-  NPM_VERSION = "9"
-  NODE_ENV = "production"
-
-# 启用 Netlify 函数
-[functions]
-  directory = "netlify/functions"
-
-# 环境变量（需要在 Netlify 控制台中设置）
+# 环境变量配置
 [context.production.environment]
   NODE_ENV = "production"
 
@@ -38,7 +30,3 @@
 
 [context.branch-deploy.environment]
   NODE_ENV = "production"
-
-# Next.js 插件配置
-[[plugins]]
-  package = "@netlify/plugin-nextjs"
